[package]
name = "sprue_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.16.0", features = ["autodiff", "train", "wgpu"] }
eframe = "0.31.1"
rfd = { version = "0.15.3" }
three-d = { path = "../three-d", features=["egui-gui"] }
three-d-asset = { version = "0.9.2", features = ["wavefront_obj", "obj", "stl"] }
tokio = { version = "1.44.1", features = ["full"] }
transform-gizmo-egui = { version = "0.5", git = "https://github.com/shadowbrok3r/transform-gizmo.git" }
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"

gl = "0.14"